service/nodeport.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: node-nodeport
spec: 
  type: NodePort 
  ports: 
  - nodePort: 30123
    port: 80
    targetPort: 8080
    
  selector:
    app: nodeapp-pod
